--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>[Your Name]'s GitHub Page</title>
+    <title>Audrey Widodo's GitHub Page</title>
 </head>
 <body>
     <header>
-        <h1>Welcome to [Your Name]'s GitHub Page</h1>
+        <h1>Welcome to Audrey Widodo's GitHub Page</h1>
     </header>
 
     <nav>
